FIX container width > max-width to remove horizontal scroll when risizing

--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ p {
 
 /* LAYOUT */
 .container {
-    width: 1200px;
+    max-width: 1200px;
     margin: 0px auto;
 }
 
